[package]
name = "Marko"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version="0.7.7", features = ["csr"] }
leptos_meta = {version = "*"}
leptos_router = {version = "*"}
gloo-net = { version = "0.6.0", features = ["http"] }
console_error_panic_hook = { version = "0.1.7" }
pulldown-cmark = "0.13.0"
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
[dependencies.web-sys]
version = "0.3.77"
features = [
 "Document",
 "Element",
 "HtmlElement",
 "Window",
]
